package pulse_counter_rpc;

message State {
  /* # State structure #
   *
   * This structure contains fields that can easily be updated through the
   * `update_state` method, but are *not* saved across device resets (i.e., are
   * only stored in RAM). */
  optional int32 pulse_pin = 1 [default = -1];
  optional uint32 pulse_channel = 2 [default = 0];
  optional uint32 pulse_direction = 3 [default = 3];  // default = RISING
  optional bool pulse_count_enable = 4 [default = false];
  optional uint32 pulse_count = 5 [default = 0];
}
